# swe-agent-eval-harness

./: .gitignore  FAILURE_ANALYSIS.md  README.md  pyproject.toml
.vite/vitest/: results.json
apps/issueflow-backend/: SETUP.md
apps/issueflow-backend/app/: main.py
apps/issueflow-frontend/: SETUP.md  vitest.eval-task003-hidden.config.ts  vitest.eval-task003-visible.config.ts  vitest.eval-task003.config.ts  vitest.eval-task003.shared.ts
evals/harness/: score.py  task_loader.py  test_runner.py
evals/results/: Untitled  aggregate_summary.json  aggregate_summary.md  task_001_backend_state_transition_golden_reference.json  task_001_backend_state_transition_golden_reference.md  task_002_sla_feature_golden_reference.json  task_002_sla_feature_golden_reference.md  task_003_frontend_stale_state_golden_reference.json  task_003_frontend_stale_state_golden_reference.md  task_004_webhook_normalization_golden_reference.json  task_004_webhook_normalization_golden_reference.md
evals/tasks/: README.md
evals/tasks/task_003_frontend_stale_state/: task.yaml
scripts/: setup.ps1  setup.sh
